      pcap_lib_version(3PCAP): Add details and examples.
      Discuss Linux BPF extensions in the man pages.
      Note endianness in pcap_compile(3PCAP) and pcap_lookupnet(3PCAP).
      man: Document devices, interfaces and "any" better.
      Remove list of OSes that support "ipv6-icmp"; all the ones we
        support appear to do so.
    Building and testing:
      Apply GNU Hurd support patch from the Debian package.
      CI: Introduce and use LIBPCAP_CMAKE_TAINTED.
      Remove all remaining support for AOS (4.3BSD Unix), BSD/OS, DOS,
        HP-UX before 10.20, IRIX, {OSF/1, Digital Unix, Tru64 Unix}, SINIX,
        SunOS 3.x, 4.x and 5.x before 5.3.2, and Ultrix.
      Add a new test program for pcap_activate().
      Make NetBSD build warning-free.
      Make Sun C build warning-free.
      Make FreeBSD, Linux and macOS builds warning-free.
      Print MAC addresses in findalldevstest.
      Parameterize the interface name in reactivatetest.
      When necessary, trust the OS to implement ffs().
      At build time require a proof of suitable snprintf(3) implementation in
        libc (and document Solaris 9 and MinGW as unsupported because of that).
      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
      CMake: Skip snprintf(3) tests when cross-compiling; test whether
        check_c_source_runs() with a trivial program and, if it doesn't
        work, don't run tests that use it.
      Autoconf: Add support for libnl-tiny with pkg-config.
      Autoconf: Fix building of something-only libpcap.
      CI: Implement "make check".
      Fix autotools and CMake issues with snprintf test and sanitizers.
        Fixes issue #1396.
      filtertest: Add "-l" flag to use Linux BPF extensions.
      filtertest: Use ntohl() on the netmask to fix the -m option.
      filtertest: Add support for stdin as "-" to the -F option.
      Rename CMake option to ENABLE_PROTOCHAIN to match Autoconf.
      Remove the "disable IPv6" build option.