@@ -43,15 +43,18 @@ User-level Packet Capture''
 [gzipped PostScript](https://www.tcpdump.org/papers/bpf-usenix93.ps.gz),
 [PDF](https://www.tcpdump.org/papers/bpf-usenix93.pdf)).
 
-Although most packet capture interfaces support in-kernel filtering,
-libpcap utilizes in-kernel filtering only for the BPF interface.
-On systems that don't have BPF, all packets are read into user-space
-and the BPF filters are evaluated in the libpcap library, incurring
+Although most packet capture interfaces support some in-kernel filtering,
+libpcap utilizes in-kernel filtering only for the use cases that support
+BPF programs, namely, the BPF packet capture interface, the Linux packet
+socket and the GNU/Hurd interface.
+
+In all other cases libpcap reads every packet into user-space and
+evaluates it using the filter program, which incurs
 added overhead (especially, for selective filters).  Ideally, libpcap
 would translate BPF filters into a filter program that is compatible
-with the underlying kernel subsystem, but this is not yet implemented.
+with the underlying kernel subsystem, but this is not implemented.
 
-BPF is standard in NetBSD, FreeBSD, OpenBSD, DragonFly BSD, macOS, and
+BPF is standard in NetBSD, FreeBSD, OpenBSD, DragonFly BSD, macOS, QNX and
 Solaris 11; an older, modified and undocumented version is standard
 in AIX.
 
